# Natural_Aggregation_IceCube

./: .gitignore  batch1_analyzer.ipynb  job.sh  main.py  pyproject.toml
00_initial_data_exploration/: explore_data.py  extract_meta_data_batch_1.py  parquet_reader.py
01_Data_Augmentation/: 250901-base_config.yaml  augmented_batch1_analyzer.ipynb  data_preprocessing.py  data_preprocessing_PMT.py  event_modifier.py
02_Adverserial_Network/: 250902-config.yaml  250904-config.yaml  data_loader.py  data_preprocessing.py  lightning_module.py  training.py  transformer_model.py
03_Test_Analysis/: plots.py
